# dapy

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  readme-algorithm.py  readme-message.py  readme-state.py
docs/: README.md  _config.yaml  conf.py  index.html  index.md  sample-algorithm.md  sample-execution.md
docs/api/: dapy.html  index.html  search.js
docs/api/dapy/: algo.html  core.html  sim.html
docs/api/dapy/algo/: learn.html
docs/api/dapy/core/: algorithm.html  event.html  pid.html  state.html  system.html  topology.html
docs/api/dapy/sim/: configuration.html  settings.html  simulator.html  timed.html  trace.html
docs/src/: readme-algorithm.py
examples/: template.py
project-dapy/: README.md  example.py  pyproject.toml  setup.py
project-dapy/dapy/algo/: learn.py
project-dapy/dapy/core/: __init__.py  algorithm.py  event.py  pid.py  system.py
project-dapy/dapy/sim/: settings.py
project-dapy/src/dapy/core/: __init__.py  algorithm.py  topology.py
project-dapy/src/dapy/sim/: __init__.py
src/dapy/: __init__.py
src/dapy/algo/: learn.py
src/dapy/core/: __init__.py  algorithm.py  event.py  pid.py  state.py  system.py  topology.py
src/dapy/sim/: __init__.py  configuration.py  simulator.py  timed.py  trace.py
tests/: README.md  test_topology.py  test_trace.py
