[project]
name = "dapy"
version = "0.1.0"
description = "A Python package simulating distributed algorithms."
authors = [
    {name = "Xavier Défago", email = "defago@c.titech.ac.jp"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

keywords = ["distributed", "algorithms", "simulation"]

[project.urls]
Repository = "https://github.com/xdefago/dapy.git"


#
# Build
#

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]



#
# Dependencies
#

[project.optional-dependencies]
test = [
    "pytest >= 8.2.0",
]
lint = [
    "ruff == 0.11.3",
]
dev = [
    "dev[test,lint]",
]



#
# Lint
#

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
ignore = ["ANN201", "ANN202"]
# [tool.ruff.lint.pydocstyle]
# convention = "google"
