[build-system]
requires = [
    # Support for setup.cfg was added in 30.3.0 by
    # https://github.com/pypa/setuptools/pull/862
    # Support for setuptools.build_meta was added in 36.6.0 by
    # https://github.com/pypa/setuptools/pull/1143
    'setuptools>=78',
    # For building wheels
    'wheel',
]


[project]
name = "dapy"
version = "0.1.0"
description = "A Python package simulating distributed algorithms."
authors = [
    {name = "Xavier Défago", email = "defago@c.titech.ac.jp"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

keywords = ["distributed", "algorithms", "simulation"]

dependencies = [
#     # For JSON serialization
    "classifiedjson >= 1.1.0",
]

[project.optional-dependencies]
test = [
    "pytest >= 8.2.0",
]
lint = [
    "ruff == 0.11.3",
]
dev = [
    "dev[test,lint]",
]

[project.urls]
Repository = "https://github.com/xdefago/dapy.git"


#
# Build
#

[tool.setuptools]
package-dir = {"" = "src"}



[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


#
# Lint
#

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
ignore = ["ANN201", "ANN202", "ANN204"]
# [tool.ruff.lint.pydocstyle]
# convention = "google"


#
# isort (import sorting)
# https://pycqa.github.io/isort/docs/configuration/config_files/
#

[tool.isort]
known_first_party = 'dapy'
# For compatibility with black (from black README.md) and
# https://pycqa.github.io/isort/docs/configuration/profiles/#black
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
