[build-system]
requires = ['setuptools>=78','wheel']

# Commands:
# - install
#     `pip install -e .`
#     `pip install -e ".[dev]"` (for development)
# - tests
#     `pytest`
# - lint
#     `ruff check src`
# - imports
#     `isort src`
# - api docs
#     `pdoc -o docs/api -d google src/dapy`


[project]
name = "dapy"
version = "0.1.0"
description = "A Python package simulating distributed algorithms."
authors = [
    {name = "Xavier Défago", email = "defago@c.titech.ac.jp"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

keywords = ["distributed", "algorithms", "simulation"]

dependencies = []

[project.optional-dependencies]
json = [ # enables JSON serialization
    "classifiedjson >= 1.0.0",
]
test = ["pytest"]
lint = ["ruff"]
imports = ["isort"]
dev = [
    "dapy[test,lint,imports,json]",
]

[project.urls]
homepage = "https://xdefago.github.io/dapy"
documentation = "https://xdefago.github.io/dapy/api"
repository = "https://github.com/xdefago/dapy.git"


#
# Build
#

[tool.setuptools]
package-dir = {"" = "src"}

#
# Tests
#

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

#
# Lint
#

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
ignore = ["ANN201", "ANN202", "ANN204", "I001", "RUF003"]


#
# isort (import sorting)
# https://pycqa.github.io/isort/
#

[tool.isort]
known_first_party = 'dapy'
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
