[project]
name = "dapy"
version = "0.1.0"
description = "A Python package simulating distributed algorithms."

readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
# This is a workaround for the issue with setuptools.find_packages() not finding packages in src

